--- a/index.html
+++ b/index.html
@@ -836,9 +836,9 @@
         </div>
         <div class="games-grid">
             <div class="game-card">
-                <img src="https://via.placeholder.com/300x180?text=Game+E" alt="Jungle Run">
+                <img src="https://via.placeholder.com/300x180?text=Game+E" alt="Match finder">
                 <div class="game-info">
-                    <h3>Jungle Run</h3>
+                    <h3>Match finder</h3>
                     <div class="game-meta">
                         <span><i class="fas fa-star"></i> 4.6</span>
                         <span><i class="fas fa-user"></i> 5K+</span>
