--- a/index.html
+++ b/index.html
@@ -979,7 +979,7 @@
             <div class="game-card">
                 <img src="https://via.placeholder.com/300x180?text=Game+L" alt="Memory Cards">
                 <div class="game-info">
-                    <h3><a href="offline-games/memory-cards" target="_blank">Memory Cards</a></h3>
+                    <h3><a href="offline-games/memory-cards" target="_blank">Match finder</a></h3>
                     <div class="game-meta">
                         <span><i class="fas fa-star"></i> 4.2</span>
                         <span><i class="fas fa-user"></i> 5K+</span>
