--- a/index.html
+++ b/index.html
@@ -976,10 +976,11 @@
                     <a href="offline-games/crossword-puzzle" class="play-btn" target="_blank">Play Now</a>
                 </div>
             </div>
+           
             <div class="game-card">
                 <img src="https://via.placeholder.com/300x180?text=Game+L" alt="Memory Cards">
                 <div class="game-info">
-                    <h3><a href="offline-games/memory-cards" target="_blank">Match finder</a></h3>
+                    <h3><a href="offline-games/match-finder.html" target="_blank">Match finder</a></h3>
                     <div class="game-meta">
                         <span><i class="fas fa-star"></i> 4.2</span>
                         <span><i class="fas fa-user"></i> 5K+</span>
