--- a/index.html
+++ b/index.html
@@ -962,9 +962,9 @@
                 </div>
             </div>
             <div class="game-card">
-                <img src="https://via.placeholder.com/300x180?text=Game+K" alt="Crossword Puzzle">
+                <img src="https://via.placeholder.com/300x180?text=Game+K" alt="Snake Game">
                 <div class="game-info">
-                    <h3><a href="/offline-games/crossword-puzzle" target="_blank">Crossword Puzzle</a></h3>
+                    <h3><a href="/offline-games/snake.html" target="_blank">Snake Game</a></h3>
                     <div class="game-meta">
                         <span><i class="fas fa-star"></i> 4.6</span>
                         <span><i class="fas fa-user"></i> 7K+</span>
