--- a/index.html
+++ b/index.html
@@ -781,7 +781,7 @@
     <div class="game-card">
         <img src="https://via.placeholder.com/300x180?text=Game+A" alt="Treasure Hunter">
         <div class="game-info">
-            <h3>Treasure Hunter</h3>
+            <h3> <a href="<a href="/offline-games/Treasure-Hunter.html" class="play-btn">Play Now</a>Treasure Hunter</h3>
             <div class="game-meta">
                 <span><i class="fas fa-star"></i> 4.8</span>
                 <span><i class="fas fa-user"></i> 10K+</span>
@@ -790,7 +790,6 @@
                 <span class="category">Adventure</span>
                 <span class="category">Puzzle</span>
             </div>
-            <a href="<a href="/offline-games/Treasure-Hunter.html" class="play-btn">Play Now</a>
         </div>
     </div>
     <div class="game-card">
