--- a/index.html
+++ b/index.html
@@ -905,7 +905,7 @@
                     <span class="category">Puzzle</span>
                     <span class="category">Numbers</span>
                 </div>
-                <a href="/offline-games/2048-numbers" class="play-btn" target="_blank">Play Now</a>
+                <a href="/offline-games/2048-numbers.html" class="play-btn" target="_blank">Play Now</a>
             </div>
         </div>
     </div>
